# dinky-proxy

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  lint-staged.config.cjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  proxy.pac  turbo.json
.claude/: settings.json
.github/: dependabot.yml
.github/workflows/: backend.yml  build-steps.yml  build.yml  e2e-tests.yml  frontend.yml  pr-build.yml  warm-cache.yml
apps/ui/: .fallowrc.json  .prettierignore  CLAUDE.md  biome.json  eslint.config.js  index.html  package.json  playwright.config.ts  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.ts
apps/ui/src/: InitialisationContext.tsx  commands.ts  index.css  main.tsx  useInitialisation.ts  utils.ts
apps/ui/src-tauri/: CLAUDE.md  Cargo.toml  tauri.conf.json
apps/ui/src-tauri/icons/: icon.icns
apps/ui/src-tauri/src/: auth_check.rs  commands.rs  config.rs  credentials.rs  keyring.rs  main.rs  net.rs  pac_server.rs  proxy_server.rs  server.rs  socks.rs  tray.rs
apps/ui/src-tauri/src/pac_settings/: commands.rs  macos.rs  mod.rs  windows.rs
apps/ui/src/components/: error-boundary.tsx
apps/ui/src/components/controls/: button.tsx  domain-pill-input.tsx  domain-pill-list.tsx  field.tsx  input.tsx  label.tsx  select.tsx  sonner.tsx  textarea.tsx  tooltip.tsx
apps/ui/src/components/forms/: form-section.tsx
apps/ui/src/routes/: index.tsx  landing.tsx
apps/ui/src/screens/configuration/: actions.tsx  (+8 more)
apps/ui/tests/: tauri-fixture.ts
apps/ui/tests/e2e/: settings.spec.ts
scripts/: collect-builds.js  release.sh
