[package]
name = "dinkyproxy-ui"
version = "0.9.0"
description = "DinkyProxy - Proxy & PAC controller"
authors = ["DinkyProxy"]
license = "MIT"
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.11", features = [ "tray-icon", "image-png"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tokio = { version = "1.37", features = ["full"] }
aes-gcm = "0.10"
sha2 = "0.10"
base64 = "0.22"
url = "2.5"
keyring-core = "1.0"
rand = "0.8"
hex = "0.4"
image = "0.25"

[target.'cfg(target_os = "macos")'.dependencies]
apple-native-keyring-store = { version = "1.0", features = ["keychain", "protected"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows-native-keyring-store = "1.1"

[target.'cfg(target_os = "linux")'.dependencies]
linux-keyutils-keyring-store = "1.0"

[lints.rust]
unused = "deny"

[lints.clippy]
all = "deny"

[features]
# This feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

